syntax = "proto3";

package account;

option go_package='./pb';

message SignInReq {
  string authType = 1;
  string authId = 2;
  string password = 3;
  repeated string params = 4;
}

message SignInResp {
  string userId = 1;
}

message SetPasswordReq {
  string userId = 1;
  string password = 2;
}

message SetPasswordResp {}

message SendVerifyCodeReq {
  string authType = 1;
  string authValue = 2;
}

message SendVerifyCodeResp {}

service Account {
  rpc signIn(SignInReq) returns (SignInResp);
  rpc setPassword(SetPasswordReq) returns (SetPasswordResp);
  rpc sendVerifyCode(SendVerifyCodeReq) returns (SendVerifyCodeResp);
}